--- a/style.css
+++ b/style.css
@@ -99,7 +99,7 @@ margin-bottom: 10px;
   .Likebutton {
     border: none;
     outline: none;
-    background-color: #6c5ce7;
+    background-color: #2208eb;
     padding: 10px 20px;
     font-size: 12px;
     font-weight: 700;
